squashing bugs

--- a/static/styles-dark.css
+++ b/static/styles-dark.css
@@ -12,11 +12,20 @@ body {
   min-height: 100vh;
 }
 
-.header, .footer {
+.header{
   background-color: #333;
   color: white;
   padding: 10px;
   text-align: center;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+  background-color: #f1f1f1;
 }
 
 .container {
@@ -111,3 +120,10 @@ body {
 .login-container button:hover {
   background-color: #45a049;
 }
+
+.layout {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
